--- a/003-test-update/toc.yml
+++ b/003-test-update/toc.yml
@@ -1,2 +1,4 @@
-- name: Physics Tag Test
-  href: physics-tag.md
+- name: Access Control Tag Test
+  href: access-control-tag-in-frontmatter.md
+- name: Markdown without frontmatter test
+  href: no-frontmatter.md
