--- a/001-metadata-physics/toc.yml
+++ b/001-metadata-physics/toc.yml
@@ -1,2 +1,4 @@
 - name: Physics Tag Test
-  href: physics-tag.md
+  href: physics-tag-in-frontmatter.md
+- name: Markdown without frontmatter test
+  href: no-frontmatter.md
